--- a/style.css
+++ b/style.css
@@ -14,3 +14,23 @@ h1 {
 	padding-left:5px;
 	margin-left:-5px;
 }	
+
+.container {
+	width:70%;
+	margin:auto;
+	float:left;
+	padding: 10px;
+	background-color: lightgray;
+}
+
+.shaded h1 {
+	background:darkslateblue;
+	color:lightcoral;
+	font:gotham 14px;
+}
+.shaded p {
+	background:darkslategrey;
+	color:lightgoldenrodyellow;
+	font:gotham 14px;
+}
+
